--- a/munchies.css
+++ b/munchies.css
@@ -46,3 +46,11 @@ ul.nav li{
 	margin: 10px;
 	padding: 10px;
 }
+.fixedBar{
+width:100%;
+height:200px;
+background:#000;
+position: fixed;
+top:0;
+left:0;
+}
