--- a/munchies.css
+++ b/munchies.css
@@ -47,10 +47,11 @@ ul.nav li{
 	padding: 10px;
 }
 .fixedBar{
-width:100%;
-height:200px;
-background: white;
-position: fixed;
-top:1;
-left:1;
+	width:100%;
+	background: white;
+	position: fixed;
+	top:0;
+	left:0;
+	z-index:1;
+	text-align:center;
 }
