--- a/munchies.css
+++ b/munchies.css
@@ -46,12 +46,24 @@ ul.nav li{
 	margin: 10px;
 	padding: 10px;
 }
-.fixedBar{
-	width:100%;
-	background: white;
-	position: fixed;
-	top:0;
-	left:0;
-	z-index:1;
-	text-align:center;
+html, body {height: 100%;}
+
+#wrap {min-height: 100%;}
+
+#main {overflow:auto;
+	padding-bottom: 150px;} 
+
+#footer {position: relative;
+	margin-top: -150px; 
+	height: 150px;
+	clear:both;} 
+
+
+body:before {
+	content:"";
+	height:100%;
+	float:left;
+	width:0;
+	margin-top:-32767px;/
 }
+
