--- a/munchies.css
+++ b/munchies.css
@@ -59,12 +59,12 @@ html, body {height: 100%;}
 #footer {position: relative;
 	margin-top: -150px; 
 	height: 150px;
+	background-color: white;
 	clear:both;} 
 
 
 body:before {
-	content:"
-	";
+	content:"	";
 	height:100%;
 	float:left;
 	width:0;
