--- a/munchies.css
+++ b/munchies.css
@@ -59,7 +59,7 @@ html, body {height: 100%;}
 #footer {position: relative;
 	margin-top: -150px; 
 	height: 150px;
-	color: white;
+	background: white;
 	clear:both;} 
 
 
