--- a/munchies.css
+++ b/munchies.css
@@ -1,7 +1,7 @@
 
 * {
 	font-family: helvetica;
-	background: #dd5741;
+	
 	}
 .center{
 	display: block;
@@ -49,7 +49,10 @@ ul.nav li{
 }
 
 
-html, body {height: 100%;}
+html, body {
+	height: 100%;
+	background: #dd5741;
+}
 
 #wrap {min-height: 100%;}
 
@@ -59,7 +62,7 @@ html, body {height: 100%;}
 #footer {position: relative;
 	margin-top: -150px; 
 	height: 150px;
-	background: white;
+	background-color: white;
 	clear:both;} 
 
 
