--- a/munchies.css
+++ b/munchies.css
@@ -62,7 +62,7 @@ html, body {
 #footer {position: relative;
 	margin-top: -150px; 
 	height: 150px;
-	background-color: white;
+	background-color: #FFF8DC;
 	clear:both;} 
 
 
