--- a/munchies.css
+++ b/munchies.css
@@ -63,7 +63,6 @@ html, body {
 	position: relative;
 	margin-top: -150px; 
 	height: 150px;
-<<<<<<< HEAD
 	background-color: white;
 	clear:both;
     margin-left: 20px;
@@ -72,10 +71,10 @@ html, body {
 }
 
 
-=======
-	background-color: #FFF8DC;
+
+background-color: #FFF8DC;
 	clear:both;} 
->>>>>>> origin/master
+	origin/master
 
 
 body:before {
