--- a/munchies.css
+++ b/munchies.css
@@ -16,7 +16,8 @@ ul.nav li{
     padding-right: 10px;
 }
 .nav li a{
-	color: black;
+	color: black
+	font-style: bold;
 	text-decoration: none;
 }
 .nav li a:hover{
